# SecondRead

./: .gitignore  README.md  docker-compose.yaml
api-gateway/: checkstyle.xml  pom.xml  suppressions.xml
api-gateway/src/main/resources/: application.properties  application.yml
authentication-service/: .editorconfig  pom.xml  suppressions.xml
authentication-service/src/main/resources/: application.properties  application.yml
book-service/: pom.xml  suppressions.xml
book-service/src/main/resources/: application.yml
configuration-service/: pom.xml
configuration-service/src/main/resources/: application.yaml
database/: .env.dev  Dockerfile  README.md  data.sql  docker-compose.yaml  docker-composer-postgres.yml
eureka-server/: README.md  checkstyle.xml  pom.xml
eureka-server/src/main/resources/: application.properties
naming-server/: pom.xml
naming-server/src/main/resources/: application.properties
scripts/FakeDataGenerator/: requirements.txt
scripts/fakedatagenerator/: .editorconfig  Cargo.toml
scripts/fakedatagenerator/.cargo/: config.toml
scripts/fakedatagenerator/src/: main.rs
security-service/: pom.xml
user-service/: checkstyle.xml  pom.xml  suppressions.xml
user-service/src/main/resources/: application.properties
webapp/secondread/: .gitignore  package-lock.json  package.json  tailwind.config.js
webapp/secondread/src/: App.tsx  main.tsx
webapp/secondread/src/_auth/: AuthLayout.tsx
webapp/secondread/src/models/: user.model.ts
webapp/secondread/src/services/: api.ts
zipkin-server/: docker-compose.yml
(+127 files in other folders)
