[package]
name = "fakedata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3.29" # for our async / await blocks
tokio = { version = "1.35.1", features = ["full"] } # for our async runtime
fake = { version = "2.9.2", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111"}
